--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="front">
                     <h1>Aylin Yıldız</h1>
                 </div>
-                <div class="back"> <img src="./me.jpg" />
+                <div class="back"> <img src="./img/me.jpg" />
                     <h1>Aylin Yıldız</h1>
                     <p>FrontEnd Developer</p>
                 </div>
