--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -15,10 +15,10 @@
 
     <h1>Quote Generator</h1>
     <hr>
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=9cFJdro7"></script>
+
     <div class="container">
         <div class="box">
-            <textarea id="quote">Here is your daily quote...</textarea>
+            <textarea disabled id="quote">Here is your daily quote...</textarea>
             <small id="author"></small>
             <input id="listen" type="button" onclick="textSpeak()" value="L i s t e n">
         </div>
@@ -30,7 +30,7 @@
         </div>
 
     </div>
-
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=9cFJdro7"></script>
     <script src="script.js"></script>
 
 </body>
